feat(search): add multi-level cached ES search APIs and integrate frontend search bar recommendations